crates/compiler/cypress/tests/snapshots/test_parse__control_characters_in_scalar_expr_formatted.snap
---
source: crates/compiler/cypress/tests/test_parse.rs
description: "'\\u(7)'\n"
---
(BeginFile
    (BeginTopLevelDecls HintExpr String=>String@0 EndTopLevelDecls)
EndFile)

[=== canfmt below ===]
String("'\\u(7)'")

[=== formatted below ===]

