crates/compiler/cypress/tests/snapshots/test_parse__dbg_expr_formatted.snap
---
source: crates/compiler/cypress/tests/test_parse.rs
description: "dbg\n    1 == 1\n\n4\n"
---
(BeginFile
    (BeginTopLevelDecls
        (BeginDbg
            (BeginBlock
                (* HintExpr Num=>Int@1 InlineBinOpEquals=>OpEquals@2 Num=>Int@3 EndBinOpEquals)
            EndBlock)
        EndDbg)
        HintExpr
        Num=>Int@4
    EndTopLevelDecls)
EndFile)

[=== canfmt below ===]
Dbg(Block([BinOp(IntBase10("1"), Equals, IntBase10("1"))]))
IntBase10("4")

[=== formatted below ===]

