crates/compiler/cypress/tests/snapshots/test_parse__decl_then_top_level_expr.snap
---
source: crates/compiler/cypress/tests/test_parse.rs
description: "abc =\n    def\nghi\n"
---
(BeginFile
    (BeginTopLevelDecls
        (BeginAssignDecl
            Ident=>LowerIdent@0
            InlineAssign=>OpAssign@1
            (BeginBlock HintExpr Ident=>LowerIdent@2 EndBlock)
        EndAssignDecl)
        HintExpr
        Ident=>LowerIdent@3
    EndTopLevelDecls)
EndFile)

[=== canfmt below ===]
Assign(Ident("abc"), Block([Ident("def")]))
Ident("ghi")

[=== formatted below ===]

