crates/compiler/cypress/tests/snapshots/test_parse__destructure_tag_assignment_expr_formatted.snap
---
source: crates/compiler/cypress/tests/test_parse.rs
description: "(Email str) = Email \"blah@example.com\"\nstr\n"
---
(BeginFile
    (BeginTopLevelDecls
        (BeginAssign
            (BeginParens
                (*
                    UpperIdent=>UpperIdent@1
                    InlineApply=>UpperIdent@1
                    Ident=>LowerIdent@2
                EndApply)
            EndParens)
            InlineAssign=>OpAssign@4
            (*
                UpperIdent=>UpperIdent@5
                InlineApply=>UpperIdent@5
                String=>String@6
            EndApply)
        EndAssign)
        HintExpr
        Ident=>LowerIdent@7
    EndTopLevelDecls)
EndFile)

[=== canfmt below ===]
Assign(Apply(UpperIdent("Email"), [Ident("str")]), Apply(UpperIdent("Email"), [String("\"blah@example.com\"")]))
Ident("str")

[=== formatted below ===]

