crates/compiler/cypress/tests/snapshots/test_parse__double_assign_block_decl.snap
---
source: crates/compiler/cypress/tests/test_parse.rs
description: "abc =\n    def\nghi =\n    jkl\n"
---
(BeginFile
    (BeginTopLevelDecls
        (BeginAssignDecl
            Ident=>LowerIdent@0
            InlineAssign=>OpAssign@1
            (BeginBlock HintExpr Ident=>LowerIdent@2 EndBlock)
        EndAssignDecl)
        (BeginAssignDecl
            Ident=>LowerIdent@3
            InlineAssign=>OpAssign@4
            (BeginBlock HintExpr Ident=>LowerIdent@5 EndBlock)
        EndAssignDecl)
    EndTopLevelDecls)
EndFile)

[=== canfmt below ===]
Assign(Ident("abc"), Block([Ident("def")]))
Assign(Ident("ghi"), Block([Ident("jkl")]))

[=== formatted below ===]

