crates/compiler/cypress/tests/snapshots/test_parse__double_assign_decl.snap
---
source: crates/compiler/cypress/tests/test_parse.rs
description: "abc = def\nghi = jkl\n"
---
(BeginFile
    (BeginTopLevelDecls
        (BeginAssign
            Ident=>LowerIdent@0
            InlineAssign=>OpAssign@1
            Ident=>LowerIdent@2
        EndAssign)
        (BeginAssign
            Ident=>LowerIdent@3
            InlineAssign=>OpAssign@4
            Ident=>LowerIdent@5
        EndAssign)
    EndTopLevelDecls)
EndFile)

[=== canfmt below ===]
Assign(Ident("abc"), Ident("def"))
Assign(Ident("ghi"), Ident("jkl"))

[=== formatted below ===]

